--- a/project_front/src/app/nav.component.html
+++ b/project_front/src/app/nav.component.html
@@ -1,58 +1,24 @@
 
-    <div class="navbar navbar-expand-sm
-    navbar-dark fixed-top" style="background-color: red;">
-    <span class="navbar-brand" style="padding-left: 10px;">Personal Pokedex</span>
-    <ul class="navbar-nav">
-    <li class="nav-item">
-    <a class="nav-link hoverable text-white"  routerLink='/'>Home</a>
-    </li>
-    <li class="nav-item">
-    <a class="nav-link text-light" 
-    routerLink='/pokedex'>Pokedex</a>
-    </li>
-    <div class = "form-inline ms-auto"
-        style = "margin-right: 10px;">
-    <ng-container *ngIf = "authService.user$ | async as user">
-        <li class="nav-item" >
-            <a class="nav-link text-light" 
-            [routerLink]="['/comments', user.name]">Comments
-        </a>   
-    </li> 
-    </ng-container>    
-    </div>                    
-    </ul>
-    <div >
-        <form class="form-inline waves-light" mdbWavesEffect [formGroup]="searchForm"  (ngSubmit)="onSearchSubmit()"> 
-            <div class="row">
-                <div class="col-6">
-              <input class="form-control mr-sm-2" 
-              type="text" placeholder="Search" 
-              formControlName="value" >
-            </div>
-
-            <div class="col-6">
-              <input id="field" name="field" class="form-control" type= "text" formControlName="field" style="visibility: hidden;" type="submit">
-                    
+    <div class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: rgb(22, 75, 175);">
+        <span class="navbar-brand" style="padding-left: 10px;">Stock Managment System</span>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                    <a class="nav-link hoverable text-white"  routerLink='/'>Home</a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link text-light" routerLink='/location'>Stock Location</a>
+            </li>
+            
+                              
+        </ul>
+        <div class = "form-inline ms-auto" style = "margin-right: 10px;">
+            <ng-container *ngIf = "authService.isAuthenticated$ | async; else loggedOut">
+                    <button class="btn btn-outline-light" (click) = "authService.logout()">Logout</button>
+            </ng-container>
+            <ng-template #loggedOut>
+                    <button class="btn btn-outline-light" (click) = "authService.loginWithRedirect({ appState : { target : this.router.url } })">Login</button>
+            </ng-template>
         </div>
-            </div>
-          </form>
-      </div> 
-    
-    <div class = "form-inline ms-auto"
-        style = "margin-right: 10px;">
-        <ng-container
-        *ngIf = "authService.isAuthenticated$ | async;
-        else loggedOut">
-    <button class="btn btn-outline-light"
-    (click) = "authService.logout()">Logout</button>
-    </ng-container>
-
-    <ng-template #loggedOut>
-        <button class="btn btn-outline-light"
-        (click) = "authService.loginWithRedirect({ appState : { target : this.router.url } })">
-        Login</button>
-    </ng-template>
-    </div>
    </div>
    
         
