--- a/project_front/src/app/nav.component.html
+++ b/project_front/src/app/nav.component.html
@@ -1,10 +1,7 @@
 
     <div class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: rgb(22, 75, 175);">
-        <span class="navbar-brand" style="padding-left: 10px;">Stock Managment System</span>
+        <span class="navbar-brand" style="padding-left: 10px; cursor: pointer;"  routerLink='/'>Stock Managment System</span>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                    <a class="nav-link hoverable text-white"  routerLink='/'>Home</a>
-            </li>
             <li class="nav-item">
                     <a class="nav-link text-light" routerLink='/location'>Stock Location</a>
             </li>
