--- a/project_front/src/app/stock.component.html
+++ b/project_front/src/app/stock.component.html
@@ -1,15 +1,18 @@
 <div style="padding-top:70px; height: 100%;">
     <div class="container">
         <div class="row">
-                <div *ngFor="let location of location_list | async">
-                    <div class="card" style = "width: 40%; margin: auto" style="cursor: pointer" >
-                        <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + location._id + '.png'">
+                <div *ngIf= "location">
+                    <div class="card" style = "width: 40%; margin: auto">
+                        <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + location._id + '.png'" width="400">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-6"><button class="btn btn-primary" [routerLink]="['/location', location._id]">Get Stock Details</button></div>
-                                <div class="col-6"><button class="btn btn-primary">Download QR Code</button></div>
-                            </div>
+                                <div class="col-12"><button class="btn btn-primary" (click)="DownloadQR(location._id)">Download QR Code</button></div>
                         </div>
+                        
+                        
+                      
+                      </div>
+                        <ng-container *ngIf = "toggleEdit; else editFormView">
                         <div class="card-body" style="background-color: rgb(22, 75, 175); color: white;">
                             <div class="row">
                                 <div class="col-6">Location: {{ location.location }}</div>
@@ -21,10 +24,87 @@
                             <div class="col-4">Row: {{ location.rack_column }}</div>
                             <div class="col-4">Column: {{ location.rack_row }}</div>
                         </div>
+                      </ng-container>
+                      <ng-template #editFormView>
+                        <form [formGroup]="editForm"(ngSubmit)="OnEditSubmit()">
+                        <div class="card-body" style="background-color: rgb(22, 75, 175); color: white;">
+                    
+                          <div class="row">
+                            <div class="col-3"><label for="location">Location:</label></div>
+                             <div class="col-3"> <div class="form-group"> 
+                              
+                                    <input id="location" name="location"
+                                        class="form-control" 
+                                        formControlName="location"
+                                        type="text"
+                                        [ngModel]="location.location">
+                            </div></div>
+                              <div class="col-3"><label for="location">Warehouse:</label></div>
+                              <div class="col-3"><div class="form-group"> 
+                              
+                                <input id="warehouse" name="warehouse"
+                                    class="form-control" 
+                                    formControlName="warehouse"
+                                    type="text"
+                                    [ngModel]="location.warehouse">
+                        </div></div>
+                              </div>
+                            
+                      </div>
+                      <div class="card-footer" style="background-color: white;">
+                        
+                        <div class="row">
+                          <div class="col-3"><label for="rack">Rack:</label></div>
+                          <div class="col-3"><div class="form-group"> 
+                              
+                            <input id="rack" name="rack"
+                                class="form-control" 
+                                formControlName="rack"
+                                type="text"
+                                [ngModel]="location.stock_rack">
+                    </div></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-3"><label for="row">Row:</label></div>
+                          <div class="col-3"><div class="form-group"> 
+                              
+                            <input id="row" name="row"
+                                class="form-control" 
+                                formControlName="row"
+                                type="text"
+                                [ngModel]="location.rack_row">
+                    </div></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-3"><label for="column">Column:</label></div>
+                          <div class="col-3"><div class="form-group"> 
+                              
+                            <input id="column" name="column"
+                                class="form-control" 
+                                formControlName="column"
+                                type="text"
+                                [ngModel]="location.rack_column">
+                    </div></div>
+                        </div>
+
+                          <button  type="submit" class="btn btn-primary">Submit</button> 
+                      </div>
+                    </form>
+                      </ng-template>
+                      <div class="card-footer" style="background-color: white;">
+                        <div class="row">
+                          <div class="col-4"><button class="btn btn-primary" (click)="onToggleEdit()">Edit</button></div>
+                          <div class="col-4" >
+                            
+                          </div>
+                          <div class="col-4"><button class="btn btn-danger" (click)="OnDeleteLocation()">Delete</button></div>
+                      </div>
+                    </div>
                         
                     
-                </div>
+                
             </div> 
+            <div *ngIf="isStock">
             <div class="row">
                 <table class="table table-sm">
                 <thead>
@@ -39,14 +119,53 @@
                     <th scope="row">{{stock.name}}</th>
                     <td>{{stock.quantity}}</td>
                     <td>{{stock.desc}}</td>
+                    <td><button class="btn btn-danger" (click)="OnDeleteStock(stock._id)">Delete</button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
+          
             <div class="row">
                 <pagination-controls (pageChange)="page = $event"></pagination-controls>
             </div>
-        </div> 
+          </div>
+            <form  [formGroup]="stockForm"  (ngSubmit)="OnStockSubmit()">
+            <div class="row">
+              <h3>Add new stock</h3>
+            </div>
+            <div class="row">
+                  <div class="col-1"><label for="name">Name:</label></div>
+                  <div class="col-2"><div class="form-group"> 
+                    <input id="name" name="name"
+                        class="form-control" 
+                        formControlName="name"
+                        type="text">
+                  </div></div>
+                  <div class="col-1"><label for="qty">Quantity:</label></div>
+                  <div class="col-2"><div class="form-group"> 
+                    <input id="qty" name="qty"
+                        class="form-control" 
+                        formControlName="qty"
+                        type="text">
+                  </div></div>
+                </div>
+                <div class="row">&nbsp;</div>
+                <div class="row">
+                <div class="col-1"><label for="desc">Description:</label></div>
+                  <div class="col-5"><div class="form-group"> 
+                    <textarea id="desc" rows="3" name="desc"
+                        class="form-control"
+                        formControlName="desc"></textarea>
+                  </div></div>
+                </div>
+                  <div class="row">
+                <div class="col-3"><button type="submit" class="btn btn-primary">Submit</button></div>
+            </div>
+            <div class="row">&nbsp;</div>
+          </form>
+         
+        
         </div>
+        
 </div>
         
