--- a/project_front/src/app/nav.component.html
+++ b/project_front/src/app/nav.component.html
@@ -5,7 +5,9 @@
             <li class="nav-item">
                     <a class="nav-link text-light" routerLink='/location'>Stock Location</a>
             </li>
-                      
+            <li class="nav-item">
+                <a class="nav-link text-light" routerLink='/stockdetails'>Stock Details</a>
+        </li>                      
         </ul>
         <div class = "form-inline ms-auto" style = "margin-right: 10px;">
             <ng-container *ngIf = "authService.isAuthenticated$ | async; else loggedOut">
