--- a/project_front/src/app/location.component.html
+++ b/project_front/src/app/location.component.html
@@ -3,7 +3,7 @@
         <div class="row">
                 <div *ngFor="let location of location_list | paginate: { itemsPerPage: 12, currentPage: page }" class="col-4 p-1">
                     <div class="card" style = "width: 40%; margin: auto" style="background-color: white;" >
-                        <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + location._id + '.png'" style="object-fit: contain; height: 100mm; padding:10px;">
+                        <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + location._id + '.png'" style="object-fit: contain; height: 100mm; padding:10px;" alt="A QR code for the assosiated stock location entry">
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-6"><button class="btn btn-primary" [routerLink]="['/location', location._id]">Get Location Details</button></div>
