--- a/project_front/src/app/stockdetails.component.html
+++ b/project_front/src/app/stockdetails.component.html
@@ -1,15 +1,15 @@
 <div style="padding-top:70px; height: 100%;">
     <div class="container">
         <div class="col-6">
-            <button class="btn btn-primary"(click)="ChangeImage()">Change Images</button>
+            <button class="btn btn-primary"(click)="ChangeImage()">Toggle Images</button>
         </div>
         <div class="row">
                 <div *ngFor="let details of details_list | paginate: { itemsPerPage: 12, currentPage: page }" class="col-4 p-1">
                     <div class="card" style = "width: 40%; margin: auto" style="background-color: white;" >
-                            <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/' + imageType + details._id + '.png?' + randomNum" style="object-fit: contain; height: 100mm; padding:10px;">
+                            <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/' + imageType + details._id + '.png?' + randomNum" style="object-fit: contain; height: 100mm; padding:10px;" alt="{{getCorrectAltText(details.desc)}}">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-6"><button class="btn btn-primary" [routerLink]="['/location', details._id]">Get Stock Details</button></div>
+                                <div class="col-6"><button class="btn btn-primary" [routerLink]="['/stockdetails', details._id]">Get Stock Details</button></div>
                                 <div class="col-6"><button class="btn btn-primary"(click)="DownloadQR(details._id)">Download QR Code</button></div>
                             </div>
                         </div>
@@ -28,51 +28,44 @@
         <div class="row">
             <pagination-controls (pageChange)="page = $event"></pagination-controls>
         </div>
-        <form  [formGroup]="locationForm"  (ngSubmit)="OnLocationSubmit()">
+        <form  [formGroup]="detailsForm"  (ngSubmit)="OnDetailsSubmit()">
             <div class="row">
-              <h3>Add new stock location</h3>
+              <h3>Add new Stock Details</h3>
             </div>
             <div class="row">
-                  <div class="col-1"><label for="location">Location:</label></div>
+                  <div class="col-1"><label for="name">Stock Name:</label></div>
                   <div class="col-2"><div class="form-group"> 
-                    <input id="location" name="location"
+                    <input id="name" name="name"
                         class="form-control" 
-                        formControlName="location"
+                        formControlName="name"
                         type="text">
                   </div></div>
-                  <div class="col-1"><label for="warehouse">Warehouse:</label></div>
+                  <div class="col-1"><label for="reoder">Reorder Amount:</label></div>
                   <div class="col-2"><div class="form-group"> 
-                    <input id="warehouse" name="warehouse"
+                    <input id="reoder" name="reoder"
                         class="form-control" 
-                        formControlName="warehouse"
+                        formControlName="reorder"
                         type="text">
                   </div></div>
+                  <div class="row">&nbsp;</div>
+                  <div class="row">
+                    <div class="col-1"><label for="desc">Description:</label></div>
+                    <div class="col-5"><div class="form-group"> 
+                        <textarea id="desc" rows="3" name="desc"
+                        class="form-control"
+                        formControlName="desc"></textarea>
+                    </div></div>
                 </div>
                 <div class="row">&nbsp;</div>
-                <div class="row">
-                    <div class="col-1"><label for="rack">Rack:</label></div>
-                    <div class="col-2"><div class="form-group"> 
-                      <input id="rack" name="rack"
-                          class="form-control" 
-                          formControlName="rack"
-                          type="text">
-                    </div></div>
-                    <div class="col-1"><label for="row">Row:</label></div>
-                    <div class="col-2"><div class="form-group"> 
-                      <input id="row" name="row"
-                          class="form-control" 
-                          formControlName="row"
-                          type="text">
-                    </div></div>
-                    <div class="col-1"><label for="column">Column:</label></div>
-                    <div class="col-2"><div class="form-group"> 
-                      <input id="column" name="column"
-                          class="form-control" 
-                          formControlName="column"
-                          type="text">
-                    </div></div>
+                
+                    
+                    
+                    <div class="col-5"><label for="img" class="form-label">Stock Image</label>
+                        <input type="file" accept="image/*" class="form-control" id="img"
+                        
+                        (change)="onFileChange($event)"></div>
                 </div>
-            
+                <div class="row">&nbsp;</div>
                   <div class="row">
                 <div class="col-3"><button type="submit" class="btn btn-primary">Submit</button></div>
             </div>
