--- a/project_front/src/app/stockdetail.component.html
+++ b/project_front/src/app/stockdetail.component.html
@@ -3,10 +3,11 @@
         <div class="row">
                 <div *ngIf= "details">
                     <div class="card" style = "width: 40%; margin: auto">
-                        <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/qrimagestore/' + details._id + '.png'" width="400">
+                      <img class = "card-img-top" [attr.src]="'https://projectqrstore.blob.core.windows.net/' + imageType + details._id + '.png?' + randomNum" style="object-fit: contain; height: 100mm; padding:10px;" alt="{{getCorrectAltText(details.desc)}}">
                         <div class="card-header">
                             <div class="row">
-                                <div class="col-12"><button class="btn btn-primary" (click)="DownloadQR(details._id)">Download QR Code</button></div>
+                                <div class="col-6"><button class="btn btn-primary" (click)="DownloadQR(details._id)">Download QR Code</button></div>
+                                <div class="col-6"><button class="btn btn-primary"(click)="ChangeImage()">Toggle Image</button></div>
                         </div>
                         
                         
@@ -97,6 +98,7 @@
                 
             </div> 
             <div *ngIf="isStock">
+            <ng-container *ngIf = "toggleStockEdit; else editStockFormView">
             <div class="row">
                 <table class="table table-sm">
                 <thead>
@@ -111,16 +113,60 @@
                     <th scope="row">{{details.name}}</th>
                     <td>{{stock.quantity}}</td>
                     <td>{{details.desc}}</td>
-                    <td><form [formGroup]="{{getFromControl(i)}}"(ngSubmit)="OnEditSubmit()"></form></td>
+                    <td><button class="btn btn-primary" [routerLink]="['/location', stock.location]">Get Stock Location</button></td>
                     <td><button class="btn btn-danger" (click)="OnDeleteStock(stock.location ,stock._id)">Delete</button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-          
+            <div class="row">
+              <div class="col-4"><button class="btn btn-primary" (click)="onToggleStockEdit()">Edit</button></div>
+            </div>
             <div class="row">
                 <pagination-controls (pageChange)="page = $event"></pagination-controls>
             </div>
+          </ng-container>
+          <ng-template #editStockFormView>
+            <div class="row">
+              <div class="col-2"><strong>Stock Name</strong></div>
+              <div class="col-2"><strong>Quantity</strong></div>
+              <div class="col-2"><strong>Description</strong></div>
+            </div>
+            <div class="row">
+              <hr style="border: 1px solid black;">
+            </div>
+            
+               
+              <div  *ngFor="let stock of stock_list | paginate: { itemsPerPage: 12, currentPage: page }; let i = index;">
+                    
+                    <form class="row" [formGroup]="getFormControl(i)" (ngSubmit)="OnEditStockSubmit(stock.location, stock._id, i)">
+                    <div class="col-2"><div class="col-8">
+                      <select id="details" name="details" class="form-control" formControlName="details" class="form-select">
+                          <option *ngFor="let s_details of stock_details" [value]="s_details._id">{{s_details.name}}</option>
+                     </select>
+                    </div></div>
+                    <div class="col-2">
+                    <div class="col-6"><div class="form-group"> 
+                      <input id="qty" name="qty"
+                          class="form-control" 
+                          formControlName="qty"
+                          type="text">
+                    </div></div></div>
+                    <div class="col-3">{{details.desc}}</div>
+                    
+                    <div class="col-4"><button  type="submit" class="btn btn-primary">Submit</button> </div>
+                    &nbsp;
+                    <hr>
+                    </form>
+                  
+                  </div>
+            <div class="row">
+                <div class="col-4"><button class="btn btn-primary" (click)="onToggleStockEdit()">Edit</button></div>
+            </div>
+            <div class="row">
+                <pagination-controls (pageChange)="page = $event"></pagination-controls>
+            </div>
+          </ng-template>
           </div>
         
         </div>
