--- a/project_front/src/app/nav.component.html
+++ b/project_front/src/app/nav.component.html
@@ -1,5 +1,7 @@
 
-    <div class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: rgb(22, 75, 175);">
+    <div class="fixed-top" style="background-color: #00adf1; Width:100%; height: 65px">
+</div>
+   <div class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #185c9b;">
         <span class="navbar-brand" style="padding-left: 10px; cursor: pointer;"  routerLink='/'>Stock Managment System</span>
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -18,5 +20,6 @@
             </ng-template>
         </div>
    </div>
+  
    
         
