--- a/project_front/src/app/nav.component.html
+++ b/project_front/src/app/nav.component.html
@@ -3,14 +3,33 @@
 </div>
    <div class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #185c9b;">
         <span class="navbar-brand" style="padding-left: 10px; cursor: pointer;"  routerLink='/'>Stock Managment System</span>
+        <ng-container *ngIf = "authService.isAuthenticated$ | async">
         <ul class="navbar-nav">
             <li class="nav-item">
                     <a class="nav-link text-light" routerLink='/location'>Stock Location</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-light" routerLink='/stockdetails'>Stock Details</a>
-        </li>                      
+        </li> 
+        <li>&nbsp;</li>                     
         </ul>
+        <div >
+                <form class="form-inline waves-light" mdbWavesEffect [formGroup]="searchForm"  (ngSubmit)="onSearchSubmit()"> 
+                    <div class="row">
+                        <div class="col-6">
+                      <input class="form-control mr-sm-2" 
+                      type="text" placeholder="Search" 
+                      formControlName="value" >
+                    </div>
+        
+                    <div class="col-6">
+                      <input id="field" name="field" class="form-control" type= "text" formControlName="field" style="visibility: hidden;" type="submit">
+                            
+                </div>
+                    </div>
+                  </form>
+              </div> 
+        </ng-container>
         <div class = "form-inline ms-auto" style = "margin-right: 10px;">
             <ng-container *ngIf = "authService.isAuthenticated$ | async; else loggedOut">
                     <button class="btn btn-outline-light" (click) = "authService.logout()">Logout</button>
