--- a/project_front/src/app/stock.component.html
+++ b/project_front/src/app/stock.component.html
@@ -108,7 +108,7 @@
                       </div>
                     </div>
                         
-                    
+                    <div class="card-footer" style="background-color: #00adf1;"></div>
             
             </div> 
             <div *ngIf="isStock">
