--- a/project_front/src/app/stockdetail.component.html
+++ b/project_front/src/app/stockdetail.component.html
@@ -95,8 +95,9 @@
                           </div>
                           <div class="col-4"><button class="btn btn-danger" (click)="OnDeleteDetails()">Delete</button></div>
                       </div>
+                      
                     </div>
-                        
+                    <div class="card-footer" style="background-color: #00adf1;"></div>
                     
                 
             </div> 
