--- a/project_front/src/app/stockdetails.component.html
+++ b/project_front/src/app/stockdetails.component.html
@@ -1,6 +1,10 @@
 <div style="padding-top:70px; height: 100%;">
     <div class="container">
         <div class="row">&nbsp;</div>
+        <div class="row">
+            <h3 class="col-6">All Stock Details</h3>
+        </div>
+        <div class="row">&nbsp;</div>
         <div class="col-6">
             <button class="btn btn-primary"(click)="ChangeImage()">Toggle Images</button>
         </div>
@@ -21,9 +25,7 @@
                                 
                                 </div>
                         </div>
-                        <div class="card-footer" style="background-color: white;">
-                            
-                        </div>
+                        <div class="card-footer" style="background-color: #00adf1;"></div>
                 </div>
             </div> 
         </div> 
